--- a/addons/account/views/report_invoice.xml
+++ b/addons/account/views/report_invoice.xml
@@ -157,7 +157,7 @@
              </p>
             <p t-if="o.payment_term.note">
                 <strong>Payment Term:</strong>
-                <span t-field="o.payment_term.note"/>
+                <span t-field="o.payment_term.name"/>
             </p>
             <p t-if="o.fiscal_position.note">
                 <strong>Fiscal Position Remark:</strong>
